unpackaged/main/default/objects/Order_Line_Item__c/fields/ItemID__c.field-meta.xml
<CustomField>
    <fullName>ItemID__c</fullName>
    <description>SOP Field - ItemID</description>
    <label>SOP OrderLineItem ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>