unpackaged/main/default/objects/Order_Line_Item__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <description>SOP Field - ItemType</description>
    <inlineHelpText>2 = Package
3 = Standard item
8 = Text / paragraph item
Blank = No description</inlineHelpText>
    <label>SOP ItemType</label>
    <length>9</length>
    <type>Text</type>
</CustomField>