unpackaged/main/default/objects/Order_Line_Item__c/fields/Line_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Price_Total__c</fullName>
    <description>(Quantity) * (Unit Price) + (Service Charge Amount) + (SOP Tax Code Percentage)</description>
    <formula>( 
(Quantity__c * UnitPrice__c) 

+ 

(Quantity__c * MainsCurrentPrice__c ) 
) 

* 

(1+( SOP_Tax_Code_Percentage__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Quantity) * (Unit Price) + (Service Charge Amount) + (SOP Tax Code Percentage)</inlineHelpText>
    <label>Line Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>