unpackaged/main/default/objects/Order_Line_Item__c/fields/LinePrice__c.field-meta.xml
<CustomField>
    <fullName>LinePrice__c</fullName>
    <description>SOP Data. Duplicated within the formula field - Line Price Subotal</description>
    <label>SOP LinePrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>