unpackaged/main/default/objects/Order_Line_Item__c/fields/MainsCurrentTaxCode__c.field-meta.xml
<CustomField>
    <fullName>MainsCurrentTaxCode__c</fullName>
    <description>Input field lookup:
A	**DONT USE-Austria 20.00% 
B	**Graphics-Belgium 21.00% 
C	**Graphics-France 20.00% 
D	**DONT USE-Denmark 25.00% 
E	**DONT USE-OLD Ire 21.00% 
F	**DONT USE-OLD Fr 19.60% 
G	**DONT USE-Germany 19.00% 
H	**DONT USE-Spain 
I	**DONT USE-Italy 20.00% 
L	**DONT USE-UK 15% 15.00% 
N	**DONT USE-NL 21% 
O	**DONT USE-NL 0% 
P	**Graphics-Ireland 23.00% 
S	**DONT USE-OLD Switz 7.60% 
T	**Graphics-Switz 8% 
V	**DONT USE-UK 17.5% 
W	UK @ 20.00% 
Z	UK Zero Rate @ 0.00%</description>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>