unpackaged/main/default/objects/Order_Line_Item__c/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if an item is mandatory on the order.</description>
    <inlineHelpText>Determines if an item is mandatory on the order.</inlineHelpText>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>