unpackaged/main/default/objects/Order_Line_Item__c/fields/OrderVersionNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderVersionNumber__c</fullName>
    <description>SOP field - OrderVersionNumber</description>
    <label>SOP Order Version Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>