unpackaged/main/default/objects/Order_Line_Item__c/fields/SOP_Order_Line_Item_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>SOP_Order_Line_Item_ExternalID__c</fullName>
    <description>Unique External ID. 
3 field values on combined from Order__c = &quot;SOP Instance&quot; &amp; &quot;OrderID&quot; &amp; &quot;Version Number&quot;</description>
    <externalId>true</externalId>
    <label>SOP Order Line Item ExternalID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>