unpackaged/main/default/objects/Order_Line_Item__c/fields/SOP_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>SOP_Supplier_Name__c</fullName>
    <description>Displays the Supplier Name related to the SOP SupplierID.</description>
    <formula>CASE( SupplierID__c , 
&quot;1&quot;, &quot;CREATIVE HIRE&quot;, 
&quot;4&quot;, &quot;SUB HIRE XACT&quot;,
&quot;5&quot;, &quot;JMT FURNITURE&quot;,
&quot;6&quot;, &quot;MESSE FRANKFURT&quot;,
&quot;7&quot;, &quot;HESTA STANDFITTING&quot;,
&quot;8&quot;, &quot;Van der Veen Electrics&quot;,
&quot;9&quot;, &quot;JMT FLOORCOVERING&quot;,
&quot;10&quot;, &quot;MESSE WAW&quot;,
&quot;11&quot;, &quot;ANTONIO DAM&quot;,
&quot;12&quot;, &quot;Frank De Dijk&quot;,
&quot;13&quot;, &quot;RESOURCE CREATIVE&quot;,
&quot;14&quot;, &quot;test&quot;,
&quot;15&quot;, &quot;HAPECO FURNITURE&quot;,
&quot;16&quot;, &quot;FLSP 4 for Everything&quot;,
&quot;17&quot;, &quot;Operations&quot;,
&quot;18&quot;, &quot;Aztec&quot;,
&quot;19&quot;, &quot;Provision&quot;,
&quot;20&quot;, &quot;JMT+VDV&quot;,
&quot;21&quot;, &quot;EAS - Standfitting&quot;,
&quot;22&quot;, &quot;EAS - Floorcovering&quot;,
&quot;23&quot;, &quot;EAS - Electrics&quot;,
&quot;26&quot;, &quot;EAS - Furniture&quot;,
&quot;27&quot;, &quot; Nameboard&quot;,
&quot;28&quot;, &quot;Blitz AV&quot;,
&quot;29&quot;, &quot;N200 / Ops&quot;,
&quot;30&quot;, &quot;Event Assistant / Sommer Event Flooring&quot;,
&quot;32&quot;, &quot;De Roeve Lighting&quot;,
&quot;33&quot;, &quot;JMT Furniture &amp; VdV (Showcases)&quot;,
&quot;34&quot;, &quot;Hapeco &amp; VdV (Showcases)&quot;,

&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Supplier Name related to the SOP SupplierID.</inlineHelpText>
    <label>SOP Supplier Name</label>
    <type>Text</type>
</CustomField>