unpackaged/main/default/objects/Order_Line_Item__c/listViews/All_Order_Line_items_this_year.listView-meta.xml
<ListView>
    <fullName>All_Order_Line_items_this_year</fullName>
    <columns>NAME</columns>
    <columns>OrderID__c</columns>
    <columns>OrderVersionNumber__c</columns>
    <columns>ItemPosition__c</columns>
    <columns>ItemCode__c</columns>
    <columns>ItemName__c</columns>
    <columns>ExtCodes__c</columns>
    <columns>LineDescription__c</columns>
    <columns>Line_Price_Subtotal__c</columns>
    <columns>SOP_Supplier_Name__c</columns>
    <columns>Instance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>All Order Line items this year</label>
    <language>en_US</language>
</ListView>